k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: libretranslate
spec:
  selector:
    matchLabels:
      app: libretranslate
  template:
    metadata:
      labels:
        app: libretranslate
    spec:
      containers:
        - name: libretranslate
          image: libretranslate/libretranslate:latest
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: libretranslate-svc
  namespace: libretranslate-prod
spec:
  selector:
    app: libretranslate
  ports:
    - port: 8002
      targetPort: 8002

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 5m
  name: libretranslate-ingress
  namespace: libretranslate-prod
  labels:
    app: libretranslate
spec:
  tls:
    - hosts:
        - libretranslate.mydomain.net
      secretName: libretranslate-mydomain-net
  rules:
    - host: libretranslate.mydomain.net
      http:
        paths:
          - backend:
              service:
                name: libretranslate-svc
                port:
                  number: 8002
            path: /
            pathType: Prefix
